apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__scopes__tests__filter_basic_query-6.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
expression: paths
---
[
    Path(
        [
            Key(
                "me",
            ),
            Key(
                "name",
            ),
        ],
    ),
]
