apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__scopes__tests__filter_basic_query-7.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
expression: doc
---
query {
  topProducts {
    type
  }
  me {
    id
    name
  }
}

