apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__scopes__tests__implementations_with_different_field_scopes-2.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
expression: "TestResult\n{\n    query: QUERY, extracted_scopes: &extracted_scopes, scopes:\n    vec![\"read\".to_string()], result: doc, paths\n}"
---
query:

          query TestIssue {
            test
            itf {
              id
            }
          }
        
extracted_scopes: {}
request scopes: ["read"]
filtered:
query TestIssue {
  test
  itf {
    id
  }
}

paths: []
