apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__scopes__tests__implementations_with_same_scopes.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
expression: "TestResult\n{\n    query: QUERY, extracted_scopes: &extracted_scopes, scopes: Vec::new(),\n    result: doc, paths\n}"
---
query:

    query {
        test
        itf {
            id
            other
        }
    }
    
extracted_scopes: {}
request scopes: []
filtered:
{
  test
  itf {
    other
  }
}

paths: ["/itf/id"]
