apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__scopes__tests__interface_field-3.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
expression: doc
---
query {
  test
  itf {
    ... on A {
      other
    }
    ... on B {
      other
    }
  }
}

